syntax = "proto3";

package api.messages;

message LockRequest {
  string name = 1;
}

message Empty {}

message LockResponse {
  oneof body {
    string error = 1;
    bool state = 2;
  }
}

message LockEvent {
  enum Status {
    Created = 0;
    Removed = 1;
    Unlocked = 2;
    Locked = 3;
  }
  string name = 1;
  Status status = 2;
}

message PeersResponse {
  repeated string peers = 1;
}

message ListResponse {
  message Lock {
    string name = 1;
    bool state = 2;
  }
  repeated Lock locks = 1;
}
